--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts"
+    "dev:server": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^2.29.0",
@@ -14,11 +15,15 @@
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
     "express": "^4.17.1",
+    "pg": "^8.0.3",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.24",
     "typescript": "^3.8.3",
     "uuidv4": "^6.0.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "@types/node": "^13.13.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^2.0.0",
