--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,7 +35,14 @@
       {
         "ts": "never"
       }
-    ]
+    ],
+    "@typescript-eslint/interface-name-prefix": [
+      "error",
+      {
+          "prefixWithI": "always"
+      }
+  ],
+  "no-useless-constructor": "off"
   },
   "settings": {
     "import/resolver":{
