--- a/ormconfig.json
+++ b/ormconfig.json
@@ -7,12 +7,12 @@
    "database": "gobarber",
    "logging": false,
    "entities": [
-    "src/models/**/*.ts"
+    "./src/modules/**/infra/typeorm/entities/*.ts"
    ],
    "migrations": [
-      "./src/database/migrations/*.ts"
+      "./src/shared/infra/typeorm/database/migrations/*.ts"
    ],
    "cli": {
-      "migrationsDir": "./src/database/migrations"
+      "migrationsDir": "./src/shared/infra/typeorm/database/migrations/*.ts"
    }
 }
