feat: Provider schedule and notifications

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,18 +1,33 @@
-{
-   "type": "postgres",
-   "host": "localhost",
-   "port": 5432,
-   "username": "postgres",
-   "password": "psqldocker",
-   "database": "gobarber",
-   "logging": false,
-   "entities": [
-    "./src/modules/**/infra/typeorm/entities/*.ts"
-   ],
-   "migrations": [
-      "./src/shared/infra/typeorm/database/migrations/*.ts"
-   ],
-   "cli": {
-      "migrationsDir": "./src/shared/infra/typeorm/database/migrations"
-   }
-}
+[
+  {
+    "name": "default",
+    "type": "postgres",
+    "host": "localhost",
+    "port": 5432,
+    "username": "postgres",
+    "password": "psqldocker",
+    "database": "gobarber",
+    "logging": false,
+    "entities": [
+     "./src/modules/**/infra/typeorm/entities/*.ts"
+    ],
+    "migrations": [
+       "./src/shared/infra/typeorm/database/migrations/*.ts"
+    ],
+    "cli": {
+       "migrationsDir": "./src/shared/infra/typeorm/database/migrations"
+    }
+ },
+ {
+  "name": "mongo",
+  "type": "mongodb",
+  "host": "localhost",
+  "port": 27017,
+  "database": "gobarber",
+  "logging": false,
+  "useUnifiedTopology": true,
+  "entities": [
+   "./src/modules/**/infra/typeorm/schemas/*.ts"
+  ]
+ }
+]
