feat: Cache and security

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,6 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "forceConsistentCasingInFileNames": true,
-  },
-  "exclude": ["coverage"]
+    "forceConsistentCasingInFileNames": true
+  }
 }
