--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,10 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "exclude": [
+    "jest.config.js",
+    "babel.config.js",
+    "prettier.config.js",
+  ]
 }
